--- a/notion2githubpages.ipynb
+++ b/notion2githubpages.ipynb
@@ -9,12 +9,13 @@
     "import zipfile\n",
     "import glob\n",
     "import time\n",
-    "import shutil"
+    "import shutil\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,37 +26,21 @@
     "path_list = glob.glob(target)\n",
     "\n",
     "posts_folder_path='_posts/'\n",
-    "images_folder_path='assets/images/'"
+    "images_folder_path='assets/images/'\n",
+    "\n",
+    "if not os.path.exists(posts_folder_path):\n",
+    "    os.makedirs(posts_folder_path)\n",
+    "if not os.path.exists(images_folder_path):\n",
+    "    os.makedirs(images_folder_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title for [PAT] PERCEPTUAL ADVERSARIAL ROBUSTNESS DEFENSE AG 7f5f3d84c9924383bfacf45eb6857720.md: \n",
-      "PAT\n",
-      "Excerpt for [PAT] PERCEPTUAL ADVERSARIAL ROBUSTNESS DEFENSE AG 7f5f3d84c9924383bfacf45eb6857720.md: \n",
-      "patpat\n",
-      "Category for [PAT] PERCEPTUAL ADVERSARIAL ROBUSTNESS DEFENSE AG 7f5f3d84c9924383bfacf45eb6857720.md: \n",
-      "paper\n",
-      "Tags (separated by '/') for [PAT] PERCEPTUAL ADVERSARIAL ROBUSTNESS DEFENSE AG 7f5f3d84c9924383bfacf45eb6857720.md: \n",
-      "pat/adv attack\n",
-      "Title for homomorphic encryption 80bc6bbea06947cd8912964a762de7c8.md: \n",
-      "HE\n",
-      "Excerpt for homomorphic encryption 80bc6bbea06947cd8912964a762de7c8.md: \n",
-      "HE\n",
-      "Category for homomorphic encryption 80bc6bbea06947cd8912964a762de7c8.md: \n",
-      "paper\n",
-      "Tags (separated by '/') for homomorphic encryption 80bc6bbea06947cd8912964a762de7c8.md: \n",
-      "HE/천정희\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "for path in path_list:    \n",
     "    \n",
@@ -113,6 +98,13 @@
     "    if images is not None:\n",
     "        shutil.move(exported_filename, images_folder_path+filename)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
