--- a/notion2githubpages.ipynb
+++ b/notion2githubpages.ipynb
@@ -87,7 +87,7 @@
     "            for line in readcontent.splitlines():\n",
     "                if 'png' in line:\n",
     "                    imagename = (line.split('.')[0].split('/')[1])\n",
-    "                    line = '!['+imagename+'.png](%'+images_folder_path+filename+'/'+imagename+'.png)'\n",
+    "                    line = '!['+imagename+'.png](%./../../'+images_folder_path+filename+'/'+imagename+'.png)'\n",
     "                file.write(line+'\\n')        \n",
     "        else:\n",
     "            file.write(readcontent) \n",
