--- a/notion2githubpages.ipynb
+++ b/notion2githubpages.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,11 +36,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Title for [PAT] PERCEPTUAL ADVERSARIAL ROBUSTNESS DEFENSE AG 7f5f3d84c9924383bfacf45eb6857720.md: \n",
+      "PATPAT\n",
+      "Excerpt for [PAT] PERCEPTUAL ADVERSARIAL ROBUSTNESS DEFENSE AG 7f5f3d84c9924383bfacf45eb6857720.md: \n",
+      "11\n",
+      "Category for [PAT] PERCEPTUAL ADVERSARIAL ROBUSTNESS DEFENSE AG 7f5f3d84c9924383bfacf45eb6857720.md: \n",
+      "22\n",
+      "Tags (separated by '/') for [PAT] PERCEPTUAL ADVERSARIAL ROBUSTNESS DEFENSE AG 7f5f3d84c9924383bfacf45eb6857720.md: \n",
+      "33\n",
+      "Title for homomorphic encryption 80bc6bbea06947cd8912964a762de7c8.md: \n",
+      "44\n",
+      "Excerpt for homomorphic encryption 80bc6bbea06947cd8912964a762de7c8.md: \n",
+      "55\n",
+      "Category for homomorphic encryption 80bc6bbea06947cd8912964a762de7c8.md: \n",
+      "66\n",
+      "Tags (separated by '/') for homomorphic encryption 80bc6bbea06947cd8912964a762de7c8.md: \n",
+      "77\n"
+     ]
+    }
+   ],
    "source": [
     "for path in path_list:    \n",
     "    \n",
@@ -87,7 +110,7 @@
     "            for line in readcontent.splitlines():\n",
     "                if 'png' in line:\n",
     "                    imagename = (line.split('.')[0].split('/')[1])\n",
-    "                    line = '!['+imagename+'.png](%./../../'+images_folder_path+filename+'/'+imagename+'.png)'\n",
+    "                    line = '!['+imagename+'.png]({{site.url}}/'+images_folder_path+filename+'/'+imagename+'.png){:.center-image}'\n",
     "                file.write(line+'\\n')        \n",
     "        else:\n",
     "            file.write(readcontent) \n",
@@ -96,7 +119,9 @@
     "\n",
     "    shutil.move(post, posts_folder_path+filename+\".md\")\n",
     "    if images is not None:\n",
-    "        shutil.move(exported_filename, images_folder_path+filename)\n"
+    "        shutil.move(exported_filename, images_folder_path+filename)\n",
+    "    zip_path.close()\n",
+    "    os.remove(path)"
    ]
   },
   {
